syntax = "proto3";

option csharp_namespace="GrpServices";

service Catalog {
  rpc getProductById (GetProductByIdRequest) returns (GetProductByIdResponse) {};
}

message GetProductByIdRequest {
  string id = 1;
}

message GetProductByIdResponse {
  string productId = 1;
  string productName = 2;
  float currentCost = 3;
  
  
}
